fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -1114,7 +1114,7 @@ a {
     align-items: flex-start;
     margin: 0;
     padding: 0;
-    gap: 2em;
+    gap: 1em;
 }
 
 .education-item-description {
